# pianoplayer

./: .gitignore  MANIFEST.in  README.md  SCORES_PROVENANCE.md  TODO.txt  banner1.odp  hand.py  main.py  pianofing.py  pianoplayer.bat  pyproject.toml  requirements.txt  scorereader.py  setup.py  test_airgstring.xml  test_chords.xml  test_invention8.xml  test_representation.py  test_scales.py  test_scales.xml  test_sonfacile.xml  test_sound.py  vkeyboard.py
.github/workflows/: ci.yml
pianoplayer/: __init__.py  cli.py  core.py  errors.py  gui.py  hand.py  models.py  musicxml_io.py  output.musicxml  output.txt  output.xml  scorereader.py  test_chords_annotated.txt  test_chords_annotated.xml  test_chors_annotated.txt  test_chors_annotated.xml  test_scales_annotated.xml  utils.py  vkeyboard.py  vtk_keyboard.py  wavegenerator.py
pianoplayer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scores/: 001-1_fingering.txt  029-1_fingering.txt  bach_airgstring.mid  bach_airgstring.xml  bach_badinerie.xml  bach_bouree_amin.xml  bach_invention4.mid  bach_invention4.xml  bach_invention4_txt.xml  bach_joy.mid  bach_joy.xml  bach_prelude.mid  bach_prelude.xml  chopin_valse.xml  chou_timetravel.xml  clayderman_ladyd.mid  clayderman_ladyd.xml  couperin_baricades.mid  couperin_baricades.xml  fugue_bach.mxl  fugue_bach.xml  fugue_bach_lite.mxl  joplin_entertainer.xml  joplin_maplerag.xml  mozart_fantasia.xml  mozart_fantasy.xml  mozart_sonfacile.mid  mozart_sonfacile.mxl  mozart_sonfacile.xml  musicxml.xml  pachelbel_canon.mid  pachelbel_canon.xml  rondo_veneziano.xml  scarlatti_k027.xml  schumann.mid  schumann.xml  strauss_annenpolka.xml  test.xml  test_chords.mid  test_invention4.xml  (+6 more)
scores/.mscbackup/: .mozart_sonfacile2u.mscz~
scores/adam_piano/: 2e partie, p.100.mid  2e partie, p.100.xml  2e partie, p.102.mid  2e partie, p.102.xml  2e partie, p.103.mid  2e partie, p.103.xml  2e partie, p.104.mid  2e partie, p.104.xml  2e partie, p.106.mid  2e partie, p.106.xml  2e partie, p.107.mid  2e partie, p.107.xml  2e partie, p.108.mid  2e partie, p.108.xml  2e partie, p.109.mid  2e partie, p.109.xml  2e partie, p.110.mid  2e partie, p.110.xml  2e partie, p.111.mid  2e partie, p.111.xml  2e partie, p.112.mid  2e partie, p.112.xml  2e partie, p.114.mid  2e partie, p.114.xml  2e partie, p.116.mid  2e partie, p.116.xml  2e partie, p.118.mid  2e partie, p.118.xml  2e partie, p.120.mid  2e partie, p.120.xml  2e partie, p.121.mid  2e partie, p.121.xml  2e partie, p.122.mid  2e partie, p.122.xml  2e partie, p.124.mid  2e partie, p.124.xml  2e partie, p.125.mid  2e partie, p.125.xml  2e partie, p.126.mid  2e partie, p.126.xml  (+108 more)
scripts/: build_standalone.py
tests/: conftest.py  test_annotate_bounds.py  test_cli_help.py  test_core_integration.py  test_hand_regression.py  test_imports.py  test_sound.py
webapi/: README.md  __init__.py  app.py  index.html
